# EndingsDetector

./: .gitignore  CMakeLists.txt  main.cpp
